07.network/12.Ingress/06.ingress/homer-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    # nginx.ingress.kubernetes.io/rewrite-target: /homer
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: homer-ingress
  namespace: homer
spec:
  ingressClassName: "nginx"
  rules:
  - host: homer-stage.ap-northeast-2.switchboard.pro
  # - host: stage.ap-northeast-2.switchboard.pro
    http:
      paths:
      # - path: /homer
      - path: /
        backend:
          serviceName: homer-webapp
          servicePort: 80
        pathType: Prefix
